envoy/grpc_test1/envoy_config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/var/log/envoy/egress_http.log"
          stat_prefix: egress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: grpc
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/helloworld.Greeter/SayHello"
                route:
                  cluster: grpc
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: grpc
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: grpc
        port_value: 9211
admin:
  access_log_path: "/var/log/envoy/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
